--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ html, body {
     font-family: 'Lato', sans-serif;
 }
 
+sub {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
 ul li {
     list-style: none;
 }
@@ -21,8 +26,11 @@ ul li {
     flex: 0.5;
 }
 
+.flex-box-nav > li:hover {
+    color: blue;
+}
+
 .flex-box-nav li:first-child {
-    /* margin-right: auto; */
     flex: 2;
 }
 
@@ -30,43 +38,21 @@ ul li {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    /* margin-left: 25rem; */
-    /* align-self: center; */
     align-items: center;
     justify-content: space-evenly;
-    /* padding: 1rem; */
     height: 25%;
-
 }
 
 
-
-
-/* .grid-container { */
-    /* height: 100%; */
-    /* display: grid; */
-    /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-    /* grid-template-rows: 15% 5% 15% 5% 25% 25% 5%; */
-    /* justify-content: center; */
-    /* align-content: center; */
-    /* justify-content: space-around; */
-/* } */
 
 .quote {
     display: flex;
     flex-direction: column;
     font-style: italic;
     align-items: center;
-    /* align-self: flex-end; */
-    /* align-content: center; */
     background-color: aliceblue;
-    /* justify-items: center; */
-    /* margin: 1rem; */
 }
 
-/* .quote section {
-    margin: 1rem;
-} */
 
 .quote blockquote:before{
     content: open-quote;
@@ -115,6 +101,8 @@ ul li {
 .img-text {
     display: flex;
     flex-direction: row;
+    text-align: left;
+
     /* margin: 2rem; */
     /* justify-content: space-between; */
 }
