--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,20 +108,20 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 30px 50px;
  
 }
-
-.reasons {
-  display:flex; 
-  flex-direction: row;
-  align-items: center;
+.reason-container img {
+  float:left;
+  margin: 5px;
 }
 
-.reasons div{
+.reason-container p {
   width: 280px;
-  padding: 10px;
+  margin-top: 0 10px;
+  flex-wrap: wrap;
+  
 }
 
 .team {
