--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
 }
 .nav {
     background-color: aquamarine;
@@ -33,9 +34,10 @@
     flex-direction:column;
     justify-content:space-around;
     align-items:center;
-    border-bottom: solid lightgrey;
+    border-bottom: solid lightgrey; 
     border-bottom-width: thin;
     margin-bottom: 20px;
+
 }
 a[href="#"] {
     color: white;
@@ -125,11 +127,33 @@ a:hover {
 .footer-box div {
     margin: 20px;
 }
+
 .sponsors {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat (4, 1fr);
+    list-style-type: none;
+}
+
+.sponsors:first-child {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.sponsors:second-child {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.sponsors:third-child {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.sponsors:nth-child(4) {
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+.sponsors:fnth-child(5) {
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
   
 
