--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,6 @@ body, a {
     background-color: rgb(213, 244, 252);
 }
 
-#intro a:hover {
-    background-color: rgb(23, 1, 32);
-    color: rgb(237, 199, 252);
-}
-
 h1 {
     font-size: 5em;
 }
@@ -57,16 +52,26 @@ nav li:hover {
     color: rgb(237, 199, 252);
 }
 
+#trynow, #about {
+    text-align: right;
+    margin-right: 10px;
+}
+
 blockquote {
     font-style: italic;
 }
 
+
 blockquote::before {
-    content: open-quote;
+    content: "\201C"; 
+    font-size: 3em;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 blockquote::after {
-    content: close-quote;
+    content:"\201D";
+    font-size: 3em;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 blockquote + p {
@@ -78,14 +83,19 @@ blockquote + p::before {
     content: "--";
 }
 
+.quote {
+    line-height: 2em;
+    padding: 10%;
+}
+
 #intro {
     text-align: center;
     padding: 10%;
 }
 
-#trynow, #about {
-    text-align: right;
-    margin-right: 10px;
+#intro a:hover {
+    background-color: rgb(23, 1, 32);
+    color: rgb(237, 199, 252);
 }
 
 #intro a {
@@ -95,11 +105,6 @@ blockquote + p::before {
     border: 2px solid lightgray;
     border-radius: 10px;
     
-}
-
-.quote {
-    line-height: 2em;
-    padding: 10%;
 }
 
 #why {
