--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ a[href="#"] {
   text-decoration: none;
 }
 
+a[href="#"]:hover {
+  background-color: goldenrod
+}
+
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
