--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12pt;
-
+  font-size: 14pt;
+  width: 1280px;
+  margin: 0 auto;
 }
 
 .top-menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  color: rgb(32, 32, 32);
-  background: rgb(129, 125, 190);
+  justify-content: flex-end;
+  color: rgb(255, 255, 255);
+  padding: 0;
+  position: fixed;
+  top: 0;
+  width: 1280px;
+  background-color: rgb(48, 48, 48);
+  margin-top: 0px;
+}
 
+a:hover {
+  background-color: rgb(243, 239, 200);
+}
+
+.top-menu li {
+  margin:  20px;
+}
+
+.top-menu li:first-child {
+  margin-right: auto
 }
 
 ul {
@@ -22,22 +39,24 @@ ul {
   flex-direction: column;
   justify-content: space-evenly;
   color: rgb(32, 32, 32);
-  background: rgb(184, 84, 84);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16pt;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20pt;
   align-items: center;
-  height: 250px;
-  padding-bottom: 50px;
+  height: 400px;
+  padding-bottom: 70px;
+  padding-top: 70px;
 
+  border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .section-header > a {
   border: 1px solid black;
+  border-radius: 15px;
   font-size: 12pt;
-  padding: 10px;
+  padding: 20px;
   text-decoration: none;
   color: black;
-
+  margin-top: 40px;
 }
 
 .section-quote {
@@ -45,7 +64,6 @@ ul {
   flex-direction: column;
   justify-content: space-evenly;
   color: rgb(32, 32, 32);
-  background: rgb(77, 156, 130);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: italic;
   align-items: center;
@@ -53,6 +71,20 @@ ul {
   padding-bottom: 50px;
   padding-right: 50px;
   padding-left: 50px;
+  border-bottom: 1px solid rgb(190, 190, 190);
+
+}
+
+blockquote {
+  quotes: '\201c' '\201d';
+}
+
+blockquote::before {
+  content: open-quote;
+}
+
+blockquote::after {
+  content: close-quote;
 }
 
 .quote-signature {
@@ -64,30 +96,36 @@ ul {
   flex-direction: column;
   justify-content: space-evenly;
   color: rgb(32, 32, 32);
-  background: rgb(183, 201, 133);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16pt;
   align-items: center;
   height: 400px;
+  border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .section-why > ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-
+  display: inline-grid; 
+  grid-template-columns: 33% 33% 33%;
 }
+
+.section-why ul > li {
+  display: inline-grid; 
+  font-size: 10pt;
+  grid-template-columns: 33% 33%;
+}
+
+
 
 .section-team {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   color: rgb(32, 32, 32);
-  background: rgb(201, 133, 186);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16pt;
   align-items: center;
   height: 600px;
+  border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .section-team > ul {
@@ -97,10 +135,6 @@ ul {
   align-content: center;
   justify-content: space-evenly;  
   font-size: 12pt;
-
-
-
-
 }
 
 .section-team ul > li {
@@ -109,10 +143,47 @@ ul {
   align-items: center;
   width: 33%;
   padding-bottom: 10px;
-
 }
 
 .section-team img {
   clip-path: circle(60px at center);
+}
 
+.section-sponsors {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: rgb(32, 32, 32);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16pt;
+  align-items: center;
+  height: 400px;
+}
+
+.section-sponsors > ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 10px;
+  justify-content: space-evenly;
+}
+
+.section-support {
+  display: flex;
+  flex-direction: row;
+  color: rgb(32, 32, 32);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16pt;
+  height: 200px;
+  justify-content: left;
+  background-color: rgb(225, 225, 231);
+
+}
+
+.section-support ul {
+  padding: 0px;
+}
+
+.section-support > div {
+padding: 0 40px;
 }
