--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+/* body {
+  background-image: url("https://trianglify.io/p/w:1440!h:900!x:BuGn!v:0.752!c:0.08!s:2hhem");
+  background-size: cover;
+  background-color: #cccccc;
+} */
+
 li {
   list-style: none;
 }
@@ -11,7 +17,7 @@ li {
 .top-nav {
   display: grid;
   grid-template-columns: 70% 15% 15%;
-  grid-template-rows: 100px;
+  grid-template-rows: 3rem;
   list-style-type: none;
 }
 
@@ -56,10 +62,13 @@ h1 {
   text-decoration: none;
   display: inline-block;
   font-size: 1.2rem;
+  background-color: white;
 }
 
 .home-container {
-  height: 40rem;
+  background-image: "trianglify.png"; 
+  background: linear-gradient(white, aqua);
+  height: 48rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,6 +107,7 @@ h1 {
 }
 
 .why-grid {
+  background-color: aqua;
   justify-content: center;
   width: 100%;
   font-family: 'Quicksand', sans-serif;
@@ -227,6 +237,7 @@ h1 {
 }
 
 .footer {
+  background-color: azure;
   font-family: 'Quicksand', sans-serif;
   display: grid;
   grid-template-columns: 3% 22% 75%;
