--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,10 @@ h2 {
     padding: 3rem;
 }
 
+.team img {
+    border-radius: 50%;
+}
+
 .sponsors {
     display: flex;
     flex-direction: row;
