--- a/index.css
+++ b/index.css
@@ -13,6 +13,9 @@ nav, footer {
   background-color: #015249;
   color: beige;
 }
+footer {
+  padding-bottom: 2em
+}
 .team-members {
   background-color: #77C9D4;
 }
@@ -72,8 +75,6 @@ blockquote {
   display: flex;
   flex-direction: row;
   align-content: space-around;
-
-
 }
 
 .flexbox li {
