--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* NAVIGATION BAR */
 nav ul {
     display: grid;
@@ -10,12 +14,21 @@ nav li {
 
 /* TAGLINE SECTION */
 .intro {
-    height: 25vh;
+    height: 30vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     border-bottom: 1px solid grey;
+
+}
+
+.intro h1 {
+    margin-top: 15vw;
+}
+
+.intro a {
+    margin-bottom: 15vw;
 }
 
 .intro a:link, a:visited {
@@ -28,8 +41,14 @@ nav li {
     display: inline-block;
 }
 
+.intro a:hover {
+    background-color: lightblue;
+    color: white;
+}
+
 .intro sub {
     margin-bottom: 5vh;
+    font-size: 1.2em;
 }
 
 /* QUOTES */
@@ -40,11 +59,24 @@ nav li {
     border-bottom: 1px solid grey;
 }
 
+.testimonial blockquote::before,
+.testimonial blockquote::after {
+    content: ' " ';
+}
+
+.testimonial p,
+.testimonial blockquote {
+    font-style: italic;
+}
+
 .testimonial p {
     text-align: right;
     margin-top: 10vh;
     margin-right: 25vh;
-    
+}
+
+.testimonial p::before {
+    content: "- "
 }
 
 /* WHY SECTION */
@@ -89,14 +121,12 @@ nav li {
 /* MEET THE TEAM */
 
 .team {
-    background-color: lightcoral;
     padding-bottom: 3vw;
     padding-top: 3vw;
 }
 
 .team h2 {
     text-align: center;
-    /* padding-top: 5vw; */
     padding-bottom: 5vw;
 }
 
@@ -129,6 +159,11 @@ nav li {
 /* SPONSORS */
 
 .sponsors {
+    display: flex;  
+    flex-direction: row;  
+    flex-wrap: wrap;
+    justify-content: space-around;
+
     border-bottom: 1px solid grey;
 }
 
@@ -146,15 +181,30 @@ nav li {
 
 .sponsors li {
     list-style-type: none;
-    width: 25%;
+    margin: 1em;
 }
 
 .sponsors img {
-    padding: 10%;
+    width: 300px;
+    height: auto;
 }
 
 /* FOOTER */
 
+.footer {
+    display: grid;
+    grid-template-columns: .5fr 3fr;
+}
+
+.footer div {
+    /* display: flex;
+    flex-direction: row */
+}
+
 .footer li {
     list-style-type: none;
+}
+
+.footer h3 {
+    padding-inline-start: 40px;
 }
