--- a/main.css
+++ b/main.css
@@ -54,9 +54,6 @@ padding-left: 380px;
   font-size: 4rem;
   font-weight: bold;
   letter-spacing: 1.4px;
-  
-  
-  
 }
 sub {
   font-size: 1.5rem;
@@ -84,9 +81,10 @@ a {
 }
 .quote1 {
   grid-area: q1;
+  display: flex;
   border-bottom: solid;
   border-width: 1px;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 blockquote {
@@ -132,25 +130,19 @@ blockquote:after {
 .why ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
 }
 
 .why img {
   float: left;
   margin: 0 1em 1em 0;
 }
-
-.why ul li{
-  /* display: flex; */
-  list-style-type: none;
-  /* padding-top: 5em; */
-}
-
   
 .quote2 {
   grid-area: q2;
   border-bottom: solid;
   border-width: 1px;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 .team {
@@ -166,13 +158,11 @@ blockquote:after {
 
 .team ul li{
   margin-bottom: 3em;
-
 }
 
 .team img {
   border-radius: 50%;
-  float: top;
-  
+  float: top; 
 }
 
 .first-3 {
@@ -191,10 +181,16 @@ blockquote:after {
 
 .sponsors {
   grid-area: s;
+  border-bottom: solid;
+  border-width: 1px;
 }
 
-.sponsors ul li {
-  display: inline-block;
+.sponsors ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .sponsors h2 {
@@ -205,7 +201,6 @@ blockquote:after {
   grid-area: f;
   display: flex;
 }
-
 
 .footer ul li {
   list-style-type: none;
