--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
-@import url(../startrly/reset.css);
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Asap|Open+Sans');
 @import url('https://use.fontawesome.com/releases/v5.8.1/css/all.css');
 
 body {
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 16px;
   color: #676a81;
-  background: rgb(225, 247, 242);
+  text-align: center;
+  background-attachment: fixed;
+  background-image: url("../images/congruent_pentagon.png");
   max-width:1920px;
   margin:0 auto;
   overflow-x:hidden;
@@ -16,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   color:#43485c;
   font-size: 20px;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Asap', sans-serif;
   text-transform: capitalize;
 }
 
@@ -44,15 +45,6 @@ ul li {
   list-style: none;
 }
 
-[placeholder]:focus::-webkit-input-placeholder {
-  -webkit-transition: opacity 0.3s 0.3s ease;
-  -moz-transition: opacity 0.3s 0.3s ease;
-  -ms-transition: opacity 0.3s 0.3s ease;
-  -o-transition: opacity 0.3s 0.3s ease;
-  transition: opacity 0.3s 0.3s ease;
-  opacity: 0;
-}
-
 a, a:hover, a:active, a:focus {
   display: inline-block;
   text-decoration: none;
@@ -62,18 +54,19 @@ a, a:hover, a:active, a:focus {
 }
 
 nav.navbar {
+  display: block;
+  width: 98%;
+  height: 50px;
+  z-index: 9;
   background-color: #fff;
   border-bottom: solid 1px #e0e0e0;
+  border-radius:3% 2% 3% 2% / 52% 26% 58% 34%;
   box-shadow: 0 3px 15px rgba(0,0,0,.2);
-  font-family: 'IBM Plex Sans', 'Open Sans', sans-serif;
+  font-family: 'Asap', 'Open Sans', sans-serif;
   font-size: 18px;
   top: 5px;
   position: fixed;
-  align-items: center;
-  display: block;
-  width: 100%;
-  height: 50px;
-  z-index: 9;
+  margin-left: 10px;
 }
 
 nav.navbar ul.nav {
@@ -94,21 +87,23 @@ nav.navbar ul.nav > li > a{
   transition: 0.3s linear;
 }
 
-.nav li:not(:first-child)not(:last-child){
-  margin-right: 10px;
+.hacky {
+  visibility: hidden;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 nav.navbar > ul.nav > li > a:hover,
 nav.navbar > ul.nav > li > a:focus,
 nav.navbar > ul.nav > li.active > a {
-  color: #d92cf9;
+  color: #26970a;
 }
 
 nav.navbar > ul.nav > li.navbar-name a,
 nav.navbar > ul.nav > li.navbar-name a:hover,
 nav.navbar > ul.nav > li.navbar-name a:focus > li > a {
   display: inline-block;
-  color: #d92cf9;
+  color: #26970a;
   margin-left: 12px;
   font-size: 20px;
   font-weight: 600;
@@ -122,13 +117,13 @@ nav.navbar > ul.nav > li.navbar-name a:focus > li > a {
   display: flex;
   flex-flow: column wrap;
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   margin: 180px 0px 0px 0px;
   padding: 5px 0px 15em 0px;
 }
 
 header > h1{
-  color: #fff;
+  color: #175806;
   font-size: 54px;
   font-weight: 700;
   text-transform: uppercase;
@@ -169,6 +164,7 @@ header > h1{
   margin: 0px 0px 100px 0px;
   line-height: 2em;
   padding: 6em 5px 5em 5px;
+  background-image: url("../images/wavy-dots.png")
 }
 
 .quote blockquote::before, blockquote::after {
@@ -276,11 +272,11 @@ h2 {
   align-items: center;
 }
 
-/* This is missing some prettification but has the structure to look nice */
 #footer {
   display: grid;
-  grid-template-columns: 1.5fr 3.5fr;
+  grid-template-columns: 1fr 5fr;
   padding: 2% 10% 10% 10%;
+  justify-items: left
   background-image: url;
   background-repeat: no-repeat;
   background-position: 80% 0%;
@@ -308,5 +304,6 @@ h2 {
 
 .menu, #footer {
   font-size: 0.9em;
-  font-family: Arial, bolder, sans-serif;
+  font-family: 'IBM Plex Sans', bolder, sans-serif;
+
 }
